--- a/src/Components/Joke&AdviceComponent/JokeAdviceComponent.css
+++ b/src/Components/Joke&AdviceComponent/JokeAdviceComponent.css
@@ -7,3 +7,25 @@
 .joke-container, .advice-container {
   width: 500px;
 }
+
+@media (max-width: 575px) {
+  .joke-advice-wrapper {
+    width: 320px;
+    margin: auto;
+    margin-bottom: 30px;
+  }
+
+  .joke-container, .advice-container {
+    max-width: 300px;
+  }
+
+  .joke-div {
+    width: 100%
+  }
+}
+
+@media (max-width: 383px) {
+  .joke-advice-wrapper {
+    display: none;
+  }
+}
